# trading-engine

./: pyproject.toml
app/: main.py
backtesting_engine/: portfolio.py
data_loader/: base.py  financial_extensions.py  main.py  transforms.py
data_loader/optimizers/: gd.py  loss_functions.py
order_book/: matching_engine.py  order_book.py  red_black_tree.py
order_books/: TEST.txt
scr/: main.py
src/: benchmark.py  main.py
tests/: test_matching_engine.py  test_order_simulator.py  test_orderbook.py  test_trading_system.py  test_tradingsystem.py
trading_system/: __init__.py  managers.py  market_data_fetcher.py  matching_engine.py  order_book.py  order_book_simulator.py  portfolio.py  redis.py  services.py  trade.py  trading_system.py  trading_system_storage.py
